--- a/app/src/main/res/layout/today_fragment.xml
+++ b/app/src/main/res/layout/today_fragment.xml
@@ -1,15 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycleView"
+    <FrameLayout
+        android:id="@+id/frameLayout1"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentTop="true" />
+        android:layout_height="match_parent">
+
+        <com.singular.barrister.Custom.RecyclerViewPager
+            android:id="@+id/viewpager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:clipToPadding="false"
+            android:paddingLeft="30dp"
+            android:paddingRight="30dp"
+            app:rvp_singlePageFling="true"
+            app:rvp_triggerOffset="0.1" />
+    </FrameLayout>
 
     <TextView
         android:id="@+id/textViewErrorText"
