--- a/app/src/main/res/layout/activity_display_client.xml
+++ b/app/src/main/res/layout/activity_display_client.xml
@@ -52,7 +52,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="First Name"
-                        android:textColor="#000000"
+                        android:textColor="@color/colorTextBlack"
                         android:textSize="16sp" />
 
                     <EditText
@@ -63,7 +63,7 @@
                         android:maxLines="1"
                         android:paddingLeft="0dp"
                         android:singleLine="true"
-                        android:textColor="#777777"
+                        android:textColor="@color/colorTextBlackLight"
                         android:textSize="16sp" />
 
 
@@ -72,7 +72,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/fab_margin"
                         android:text="Last Name"
-                        android:textColor="#000000"
+                        android:textColor="@color/colorTextBlack"
                         android:textSize="16sp" />
 
                     <EditText
@@ -83,7 +83,7 @@
                         android:maxLines="1"
                         android:paddingLeft="0dp"
                         android:singleLine="true"
-                        android:textColor="#777777"
+                        android:textColor="@color/colorTextBlackLight"
                         android:textSize="16sp" />
 
                 </LinearLayout>
@@ -99,7 +99,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Name"
-                        android:textColor="#000000"
+                        android:textColor="@color/colorTextBlack"
                         android:textSize="16sp" />
 
 
@@ -109,7 +109,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="3dp"
                         android:text="Client Name"
-                        android:textColor="#777777"
+                        android:textColor="@color/colorTextBlackLight"
                         android:textSize="16sp" />
 
                     <View
@@ -138,7 +138,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/fab_margin"
                             android:text="Phone"
-                            android:textColor="#000000"
+                            android:textColor="@color/colorTextBlack"
                             android:textSize="16sp" />
 
 
@@ -148,7 +148,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="3dp"
                             android:text="Client number"
-                            android:textColor="#777777"
+                            android:textColor="@color/colorTextBlackLight"
                             android:textSize="16sp" />
 
                     </LinearLayout>
@@ -186,7 +186,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="@dimen/fab_margin"
                             android:text="Email Id"
-                            android:textColor="#000000"
+                            android:textColor="@color/colorTextBlack"
                             android:textSize="16sp" />
 
 
@@ -196,7 +196,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="3dp"
                             android:text="email id"
-                            android:textColor="#777777"
+                            android:textColor="@color/colorTextBlackLight"
                             android:textSize="16sp" />
 
                     </LinearLayout>
