--- a/app/src/main/res/drawable/circle_green.xml
+++ b/app/src/main/res/drawable/circle_green.xml
@@ -3,7 +3,8 @@
     android:shape="oval">
     <corners android:radius="100dp" />
     <gradient
-        android:startColor="#66ff33"
-        android:endColor="#009933"
+        android:startColor="@color/colorPrimaryDark"
+        android:centerColor="@color/colorPrimary"
+        android:endColor="@color/secondaryColor"
         android:angle="-270" />
 </shape>
