--- a/app/src/main/res/layout/activity_display_case.xml
+++ b/app/src/main/res/layout/activity_display_case.xml
@@ -37,7 +37,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Case Details"
-                    android:textColor="#009688"
+                    android:textColor="@color/textLightGreen"
                     android:textSize="16sp" />
 
                 <TextView
@@ -45,7 +45,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/fab_margin"
                     android:text="Status"
-                    android:textColor="#000000"
+                    android:textColor="@color/colorTextBlack"
                     android:textSize="16sp" />
 
                 <TextView
@@ -53,7 +53,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="3dp"
-                    android:textColor="#777777"
+                    android:textColor="@color/colorTextBlackLight"
                     android:textSize="16sp" />
 
                 <View
@@ -61,13 +61,13 @@
                     android:layout_height="0.2dp"
                     android:layout_marginBottom="10dp"
                     android:layout_marginTop="10dp"
-                    android:background="#777777" />
+                    android:background="@color/colorTextBlackLight" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Type"
-                    android:textColor="#000000"
+                    android:textColor="@color/colorTextBlack"
                     android:textSize="16sp" />
 
                 <TextView
@@ -75,7 +75,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="3dp"
-                    android:textColor="#777777"
+                    android:textColor="@color/colorTextBlackLight"
                     android:textSize="16sp" />
 
                 <View
@@ -83,13 +83,13 @@
                     android:layout_height="0.2dp"
                     android:layout_marginBottom="10dp"
                     android:layout_marginTop="10dp"
-                    android:background="#777777" />
+                    android:background="@color/colorTextBlackLight" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Court name"
-                    android:textColor="#000000"
+                    android:textColor="@color/colorTextBlack"
                     android:textSize="16sp" />
 
                 <TextView
@@ -97,7 +97,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="3dp"
-                    android:textColor="#777777"
+                    android:textColor="@color/colorTextBlackLight"
                     android:textSize="16sp" />
 
                 <View
@@ -105,13 +105,13 @@
                     android:layout_height="0.2dp"
                     android:layout_marginBottom="10dp"
                     android:layout_marginTop="10dp"
-                    android:background="#777777" />
+                    android:background="@color/colorTextBlackLight" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="CNR number"
-                    android:textColor="#000000"
+                    android:textColor="@color/colorTextBlackLight"
                     android:textSize="16sp" />
 
                 <TextView
@@ -119,7 +119,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="3dp"
-                    android:textColor="#777777"
+                    android:textColor="@color/colorTextBlackLight"
                     android:textSize="16sp" />
 
                 <View
@@ -127,13 +127,13 @@
                     android:layout_height="0.2dp"
                     android:layout_marginBottom="10dp"
                     android:layout_marginTop="10dp"
-                    android:background="#777777" />
+                    android:background="@color/colorTextBlackLight" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Registration number"
-                    android:textColor="#000000"
+                    android:textColor="@color/colorTextBlackLight"
                     android:textSize="16sp" />
 
                 <TextView
@@ -141,7 +141,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="3dp"
-                    android:textColor="#777777"
+                    android:textColor="@color/colorTextBlackLight"
                     android:textSize="16sp" />
 
                 <View
@@ -149,13 +149,13 @@
                     android:layout_height="0.2dp"
                     android:layout_marginBottom="10dp"
                     android:layout_marginTop="10dp"
-                    android:background="#777777" />
+                    android:background="@color/colorTextBlackLight" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Register date"
-                    android:textColor="#000000"
+                    android:textColor="@color/colorTextBlack"
                     android:textSize="16sp" />
 
                 <TextView
@@ -163,21 +163,21 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="3dp"
-                    android:textColor="#777777"
+                    android:textColor="@color/colorTextBlackLight"
                     android:textSize="16sp" />
 
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="0.2dp"
                     android:layout_marginTop="10dp"
-                    android:background="#777777" />
+                    android:background="@color/colorTextBlackLight" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/fab_margin"
                     android:text="Next Hearing"
-                    android:textColor="#009688"
+                    android:textColor="@color/textLightGreen"
                     android:textSize="16sp" />
 
                 <TextView
@@ -185,7 +185,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/fab_margin"
                     android:text="Date"
-                    android:textColor="#000000"
+                    android:textColor="@color/colorTextBlack"
                     android:textSize="16sp" />
 
                 <TextView
@@ -193,7 +193,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="3dp"
-                    android:textColor="#777777"
+                    android:textColor="@color/colorTextBlackLight"
                     android:textSize="16sp" />
 
                 <View
@@ -201,13 +201,13 @@
                     android:layout_height="0.2dp"
                     android:layout_marginBottom="10dp"
                     android:layout_marginTop="10dp"
-                    android:background="#777777" />
+                    android:background="@color/colorTextBlackLight" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Notes"
-                    android:textColor="#000000"
+                    android:textColor="@color/colorTextBlack"
                     android:textSize="16sp" />
 
                 <TextView
@@ -215,7 +215,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="3dp"
-                    android:textColor="#777777"
+                    android:textColor="@color/colorTextBlackLight"
                     android:textSize="16sp" />
 
                 <View
@@ -223,7 +223,7 @@
                     android:layout_height="0.2dp"
                     android:layout_marginBottom="10dp"
                     android:layout_marginTop="10dp"
-                    android:background="#777777" />
+                    android:background="@color/colorTextBlackLight" />
 
 
                 <TextView
@@ -231,7 +231,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/fab_margin"
                     android:text="Client Details"
-                    android:textColor="#009688"
+                    android:textColor="@color/textLightGreen"
                     android:textSize="16sp" />
 
                 <TextView
@@ -239,7 +239,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/fab_margin"
                     android:text="Name"
-                    android:textColor="#000000"
+                    android:textColor="@color/colorTextBlack"
                     android:textSize="16sp" />
 
                 <TextView
@@ -247,7 +247,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="3dp"
-                    android:textColor="#777777"
+                    android:textColor="@color/colorTextBlackLight"
                     android:textSize="16sp" />
 
                 <View
@@ -255,13 +255,13 @@
                     android:layout_height="0.2dp"
                     android:layout_marginBottom="10dp"
                     android:layout_marginTop="10dp"
-                    android:background="#777777" />
+                    android:background="@color/colorTextBlackLight" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Email Id"
-                    android:textColor="#000000"
+                    android:textColor="@color/colorTextBlack"
                     android:textSize="16sp" />
 
                 <TextView
@@ -278,13 +278,13 @@
                     android:layout_height="0.2dp"
                     android:layout_marginBottom="10dp"
                     android:layout_marginTop="10dp"
-                    android:background="#777777" />
+                    android:background="@color/colorTextBlackLight" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Phone"
-                    android:textColor="#000000"
+                    android:textColor="@color/colorTextBlack"
                     android:textSize="16sp" />
 
                 <TextView
@@ -301,13 +301,13 @@
                     android:layout_height="0.2dp"
                     android:layout_marginBottom="10dp"
                     android:layout_marginTop="10dp"
-                    android:background="#777777" />
+                    android:background="@color/colorTextBlackLight" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Address"
-                    android:textColor="#000000"
+                    android:textColor="@color/colorTextBlack"
                     android:textSize="16sp" />
 
                 <TextView
@@ -315,7 +315,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="3dp"
-                    android:textColor="#777777"
+                    android:textColor="@color/colorTextBlackLight"
                     android:textSize="16sp" />
 
                 <View
@@ -323,13 +323,13 @@
                     android:layout_height="0.2dp"
                     android:layout_marginBottom="10dp"
                     android:layout_marginTop="10dp"
-                    android:background="#777777" />
+                    android:background="@color/colorTextBlackLight" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Client Type"
-                    android:textColor="#000000"
+                    android:textColor="@color/colorTextBlack"
                     android:textSize="16sp" />
 
                 <TextView
@@ -337,7 +337,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="3dp"
-                    android:textColor="#777777"
+                    android:textColor="@color/colorTextBlackLight"
                     android:textSize="16sp" />
 
                 <TextView
@@ -345,7 +345,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/fab_margin"
                     android:text="Opposition Details"
-                    android:textColor="#009688"
+                    android:textColor="@color/textLightGreen"
                     android:textSize="16sp" />
 
                 <TextView
@@ -353,7 +353,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/fab_margin"
                     android:text="Name"
-                    android:textColor="#000000"
+                    android:textColor="@color/colorTextBlack"
                     android:textSize="16sp" />
 
                 <TextView
@@ -361,7 +361,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="3dp"
-                    android:textColor="#777777"
+                    android:textColor="@color/colorTextBlackLight"
                     android:textSize="16sp" />
 
                 <View
@@ -369,13 +369,13 @@
                     android:layout_height="0.2dp"
                     android:layout_marginBottom="10dp"
                     android:layout_marginTop="10dp"
-                    android:background="#777777" />
+                    android:background="@color/colorTextBlackLight" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Phone"
-                    android:textColor="#000000"
+                    android:textColor="@color/colorTextBlack"
                     android:textSize="16sp" />
 
                 <TextView
@@ -392,13 +392,13 @@
                     android:layout_height="0.2dp"
                     android:layout_marginBottom="10dp"
                     android:layout_marginTop="10dp"
-                    android:background="#777777" />
+                    android:background="@color/colorTextBlackLight" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Lawyer Name"
-                    android:textColor="#000000"
+                    android:textColor="@color/colorTextBlack"
                     android:textSize="16sp" />
 
                 <TextView
@@ -406,7 +406,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="3dp"
-                    android:textColor="#777777"
+                    android:textColor="@color/colorTextBlackLight"
                     android:textSize="16sp" />
 
                 <View
@@ -414,13 +414,13 @@
                     android:layout_height="0.2dp"
                     android:layout_marginBottom="10dp"
                     android:layout_marginTop="10dp"
-                    android:background="#777777" />
+                    android:background="@color/colorTextBlackLight" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Lawyer Phone"
-                    android:textColor="#000000"
+                    android:textColor="@color/colorTextBlack"
                     android:textSize="16sp" />
 
                 <TextView
