--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -42,7 +42,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Name"
-                    android:textColor="#000000"
+                    android:textColor="@color/colorTextBlack"
                     android:textSize="16sp" />
 
                 <TextView
@@ -50,21 +50,21 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
-                    android:textColor="#777777"
+                    android:textColor="@color/colorTextBlackLight"
                     android:textSize="16sp" />
 
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="0.2dp"
                     android:layout_marginTop="10dp"
-                    android:background="#777777" />
+                    android:background="@color/colorTextBlackLight" />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/fab_margin"
                     android:text="Email id"
-                    android:textColor="#000000"
+                    android:textColor="@color/colorTextBlack"
                     android:textSize="16sp" />
 
                 <TextView
@@ -72,21 +72,21 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
-                    android:textColor="#777777"
+                    android:textColor="@color/colorTextBlackLight"
                     android:textSize="16sp" />
 
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="0.2dp"
                     android:layout_marginTop="10dp"
-                    android:background="#777777" />
+                    android:background="@color/colorTextBlackLight" />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/fab_margin"
                     android:text="Phone number"
-                    android:textColor="#000000"
+                    android:textColor="@color/colorTextBlack"
                     android:textSize="16sp" />
 
                 <TextView
@@ -94,21 +94,21 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
-                    android:textColor="#777777"
+                    android:textColor="@color/colorTextBlackLight"
                     android:textSize="16sp" />
 
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="0.2dp"
                     android:layout_marginTop="10dp"
-                    android:background="#777777" />
+                    android:background="@color/colorTextBlackLight" />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/fab_margin"
                     android:text="Address"
-                    android:textColor="#000000"
+                    android:textColor="@color/colorTextBlack"
                     android:textSize="16sp"
                     android:visibility="gone"/>
 
@@ -117,7 +117,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
-                    android:textColor="#777777"
+                    android:textColor="@color/colorTextBlackLight"
                     android:textSize="16sp"
                     android:visibility="gone" />
 
@@ -125,7 +125,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="0.2dp"
                     android:layout_marginTop="10dp"
-                    android:background="#777777"
+                    android:background="@color/colorTextBlackLight"
                     android:visibility="gone"/>
             </LinearLayout>
 
