--- a/app/src/main/res/layout/activity_sign_in_account.xml
+++ b/app/src/main/res/layout/activity_sign_in_account.xml
@@ -68,7 +68,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="@dimen/fab_margin"
         android:text="@string/no_account"
-        android:textColor="#000000"
+        android:textColor="@color/colorTextBlack"
         android:textSize="16sp"
         android:visibility="gone" />
 
@@ -92,7 +92,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="@dimen/fab_margin"
         android:text="@string/privacy_policy"
-        android:textColor="#000000"
+        android:textColor="@color/colorTextBlack"
         android:textSize="14sp"
         android:visibility="gone" />
 
@@ -102,7 +102,7 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:text="@string/company_name"
-        android:textColor="#000000"
+        android:textColor="@color/colorTextBlack"
         android:textSize="12sp" />
 
     <ProgressBar
