--- a/app/src/main/res/layout/simple_list_item.xml
+++ b/app/src/main/res/layout/simple_list_item.xml
@@ -9,7 +9,7 @@
         android:id="@+id/textViewName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="#000000"
+        android:textColor="@color/colorTextBlack"
         android:textSize="16sp"
         android:padding="8dp"/>
 
@@ -23,7 +23,7 @@
         android:id="@+id/textViewSubName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="#777777"
+        android:textColor="@color/colorTextBlackLight"
         android:text="16sp"
         android:padding="4dp"
         android:layout_marginLeft="@dimen/fab_margin"
@@ -32,5 +32,5 @@
         android:id="@+id/horizontalView"
         android:layout_width="match_parent"
         android:layout_height="0.2dp"
-        android:background="#777777"/>
+        android:background="@color/colorTextBlackLight"/>
 </LinearLayout>
