--- a/app/src/main/res/layout/state_item.xml
+++ b/app/src/main/res/layout/state_item.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="8dp"
-        android:textColor="#000000"
+        android:textColor="@color/colorTextBlack"
         android:textSize="16sp" />
 
     <View
