--- a/app/src/main/res/layout/today_fragment.xml
+++ b/app/src/main/res/layout/today_fragment.xml
@@ -27,7 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:text="There is no court added yet!"
-        android:textColor="#000000"
+        android:textColor="@color/colorTextBlack"
         android:visibility="gone" />
 
     <ProgressBar
